fixtures/invalid/unknown-attribute.lmk
@summary mood="casual"
Attributes are fixed by block type.
